# enigma

./: .gitignore  .hgignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.rst  README.txt  pyenigma.py  pyproject.toml  setup.py
enigma/: __init__.py  keyfile.py  machine.py  main.py  plugboard.py
enigma/docs/: Makefile
enigma/docs/source/: conf.py  guide.rst  index.rst  keyfile.rst  library.rst  overview.rst  pyenigma.rst  reference.rst
enigma/examples/: example1.py
enigma/rotors/: __init__.py  data.py  factory.py  rotor.py
enigma/tests/: test_enigma.py  test_plugboard.py  test_rotor.py
